# DUNE_ISTL_CG

./: README.md  bib.bib  cg_solver.hh  chebyshev_semi_iteration.hh  conjugate_gradient_step.hh  conjugate_gradients.hh  generic_iterative_method.hh  generic_step.hh  mixins.hh  operator_type.hh  optional.hh  project.config  rcg_solver.hh  relative_energy_termination_criterion.hh  residual_based_termination_criterion.hh  tcg_solver.hh  test.cpp  trcg_solver.hh  util.hh  voider.hh
Mixins/: absoluteAccuracy.hh  eps.hh  iterativeRefinements.hh  maxSteps.hh  minimalAccuracy.hh  relativeAccuracy.hh  verbosity.hh
mixins/: absoluteAccuracy.hh  eps.hh  iterativeRefinements.hh  maxSteps.hh  minimalAccuracy.hh  mixinConnection.hh  relativeAccuracy.hh  verbosity.hh
tests/: CMakeLists.txt  cg_2d_test.cpp  generic_iterative_method.cpp  generic_step.cpp  rcg_2d_test.cpp  relative_energy_error_termination_criterion.cpp  residual_based_termination_criterion.cpp  tcg_2d_test.cpp  trcg_2d_test.cpp
tests/mock/: linearOperator_2d.hh  step.cpp  step.hh  termination_criteria.hh  trivialPreconditioner.hh  vector.cpp  vector.hh
tmp/: compile_time_sequence.hh  empty.hh  for_each.hh  logic.hh  optional_base_class.hh  type_traits.hh
